global using Ardalis.Result;
global using Google.Protobuf.Collections;
global using Google.Protobuf.WellKnownTypes;
global using Grpc.Core;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEvent;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEvent.Command.Sections;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEvent.Commands;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEvent.DTOs;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEvent.Queries;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEventPayload;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEventPayload.Command.Sections;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEventPayload.Commands;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEventPayload.DTOs;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEventPayload.Queries;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.DummyItem;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.DummyItem.Command.Sections;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.DummyItem.Commands;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.DummyItem.DTOs;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.DummyItem.Queries;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCasesForClient.AppIncomingEvent.Services;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCasesForClient.AppIncomingEventPayload.Services;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCasesForClient.DummyItem.Services;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Infrastructure.Grpc.AppIncomingEvent;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Infrastructure.Grpc.AppIncomingEventPayload;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Infrastructure.Grpc.DummyItem;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Infrastructure.GrpcClient.AppIncomingEvent.Services;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Infrastructure.GrpcClient.AppIncomingEventPayload.Services;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Infrastructure.GrpcClient.DummyItem.Services;
global using Makc.Dummy.Shared.Core.App;
global using Makc.Dummy.Shared.Core.Http;
global using Makc.Dummy.Shared.Infrastructure.Grpc;
global using Microsoft.Extensions.DependencyInjection;
global using Microsoft.Extensions.Logging;
global using AppIncomingEventGrpcClient = Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Infrastructure.Grpc.AppIncomingEvent.AppIncomingEvent.AppIncomingEventClient;
global using AppIncomingEventPayloadGrpcClient = Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Infrastructure.Grpc.AppIncomingEventPayload.AppIncomingEventPayload.AppIncomingEventPayloadClient;
global using DummyItemGrpcClient = Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Infrastructure.Grpc.DummyItem.DummyItem.DummyItemClient;
