global using Google.Protobuf.WellKnownTypes;
global using Grpc.Core;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEvent.Actions.Delete;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEvent.Actions.Get;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEvent.Actions.GetList;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEvent.Actions.GetPage;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEvent.Actions.Save;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEvent.Commands;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEvent.DTOs;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEvent.Queries;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEventPayload.Actions.Delete;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEventPayload.Actions.Get;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEventPayload.Actions.GetList;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEventPayload.Actions.GetPage;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEventPayload.Actions.Save;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEventPayload.Commands;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEventPayload.DTOs;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.AppIncomingEventPayload.Queries;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.DummyItem.Actions.Delete;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.DummyItem.Actions.Get;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.DummyItem.Actions.GetList;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.DummyItem.Actions.GetPage;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.DummyItem.Actions.Save;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.DummyItem.Commands;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.DummyItem.DTOs;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Domain.UseCases.DummyItem.Queries;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Infrastructure.Grpc.AppIncomingEvent;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Infrastructure.Grpc.AppIncomingEventPayload;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Infrastructure.Grpc.DummyItem;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Infrastructure.GrpcServer.AppIncomingEvent;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Infrastructure.GrpcServer.AppIncomingEventPayload;
global using Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Infrastructure.GrpcServer.DummyItem;
global using Makc.Dummy.Shared.Core.App.Event.Payloads;
global using Makc.Dummy.Shared.Infrastructure.Grpc;
global using MediatR;
global using Microsoft.AspNetCore.Builder;
global using Microsoft.Extensions.DependencyInjection;
global using Microsoft.Extensions.Logging;
global using AppIncomingEventPayloadServiceBase = Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Infrastructure.Grpc.AppIncomingEventPayload.AppIncomingEventPayload.AppIncomingEventPayloadBase;
global using AppIncomingEventServiceBase = Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Infrastructure.Grpc.AppIncomingEvent.AppIncomingEvent.AppIncomingEventBase;
global using DummyItemServiceBase = Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Infrastructure.Grpc.DummyItem.DummyItem.DummyItemBase;
